--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@ body {
     "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
     sans-serif;
   background-color: #ffe3e3;
+  word-break: keep-all;
 }
 
 a {
