--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,10 @@ body {
   scroll-behavior: smooth;
 }
 
+body.isOpen {
+  overflow-y: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
