feat: Add MusicalGuide 내용 완성

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -26,3 +26,14 @@ a {
 * {
   box-sizing: border-box;
 }
+
+ul {
+  list-style: disc;
+  margin-left: 16px;
+}
+
+li {
+  & {
+    margin-bottom: 7px;
+  }
+}
