--- a/src/components/detail/calendar/calendarStyle.module.scss
+++ b/src/components/detail/calendar/calendarStyle.module.scss
@@ -46,6 +46,10 @@
         background-color: #f4cede;
         border-radius: 9rem;
         padding: 0.5rem 0.6125rem;
+
+        @media screen and (min-width: 640px) {
+          padding: 0.4125rem;
+        }
       }
     }
   }
