style: Update Header 배경색 수정, 할인 정보 수정, 캘린더 폰트 수정

--- a/src/components/detail/calendar/calendarStyle.module.scss
+++ b/src/components/detail/calendar/calendarStyle.module.scss
@@ -1,7 +1,10 @@
 .calendar {
   width: 100%;
   border: none;
-  font-family: Pretendard;
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
+    "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
+    "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    sans-serif;
   font-weight: 600;
   color: #193052;
 
